[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/research_node_widget.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.439216, 0.439216, 0.439216, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ResearchNodeWidget" type="PanelContainer"]
custom_minimum_size = Vector2(160, 100)
offset_right = 160.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Tech Name"
autowrap_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="CostLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "100 Cr"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TooltipPanel" type="PanelContainer" parent="."]
visible = false
z_index = 20
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 120.0

[node name="MarginContainer" type="MarginContainer" parent="TooltipPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="TooltipPanel/MarginContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Description..."
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
